# deep-research

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: sync-to-huggingface.yml
src/: main.py
src/deep_research/: research_manager.py
src/deep_research/agents/: __init__.py  email_agent.py  planner_agent.py  search_agent.py  writer_agent.py
src/deep_research/ui/: __init__.py  gradio_app.py
tests/: test_imports.py
